@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 Yahoo Inc.
+ * Copyright The Athenz Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,18 +16,19 @@
 
 package com.yahoo.athenz.container;
 
-import java.io.File;
-import java.net.InetAddress;
-import java.util.EnumSet;
-import java.util.HashMap;
-import java.util.Map;
-
-import javax.servlet.DispatcherType;
-
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.yahoo.athenz.auth.PrivateKeyStore;
+import com.yahoo.athenz.auth.PrivateKeyStoreFactory;
+import com.yahoo.athenz.common.server.log.jetty.AthenzConnectionListener;
+import com.yahoo.athenz.common.server.log.jetty.AthenzRequestLog;
 import com.yahoo.athenz.common.server.log.jetty.JettyConnectionLogger;
 import com.yahoo.athenz.common.server.log.jetty.JettyConnectionLoggerFactory;
+import com.yahoo.athenz.common.server.util.ConfigProperties;
+import com.yahoo.athenz.common.server.util.config.providers.ConfigProviderAwsParametersStore;
+import com.yahoo.athenz.common.server.util.config.providers.ConfigProviderFile;
+import com.yahoo.athenz.container.filter.HealthCheckFilter;
+import jakarta.servlet.DispatcherType;
 import org.eclipse.jetty.deploy.DeploymentManager;
 import org.eclipse.jetty.deploy.PropertiesConfigurationManager;
 import org.eclipse.jetty.deploy.bindings.DebugListenerBinding;
@@ -35,35 +36,30 @@ import org.eclipse.jetty.deploy.providers.WebAppProvider;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpHeaderValue;
 import org.eclipse.jetty.http.HttpVersion;
+import org.eclipse.jetty.io.ArrayRetainableByteBufferPool;
 import org.eclipse.jetty.rewrite.handler.HeaderPatternRule;
 import org.eclipse.jetty.rewrite.handler.RewriteHandler;
-import org.eclipse.jetty.server.DebugListener;
-import org.eclipse.jetty.server.HttpConfiguration;
-import org.eclipse.jetty.server.HttpConnectionFactory;
-import org.eclipse.jetty.server.ProxyConnectionFactory;
-import org.eclipse.jetty.server.SecureRequestCustomizer;
-import org.eclipse.jetty.server.Server;
-import org.eclipse.jetty.server.ServerConnector;
-import org.eclipse.jetty.server.Slf4jRequestLog;
-import org.eclipse.jetty.server.SslConnectionFactory;
+import org.eclipse.jetty.server.*;
 import org.eclipse.jetty.server.handler.ContextHandlerCollection;
 import org.eclipse.jetty.server.handler.HandlerCollection;
-import org.eclipse.jetty.server.handler.RequestLogHandler;
 import org.eclipse.jetty.server.handler.StatisticsHandler;
 import org.eclipse.jetty.server.handler.gzip.GzipHandler;
 import org.eclipse.jetty.servlet.FilterHolder;
 import org.eclipse.jetty.servlet.ServletContextHandler;
+import org.eclipse.jetty.util.StringUtil;
 import org.eclipse.jetty.util.ssl.KeyStoreScanner;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.eclipse.jetty.util.thread.QueuedThreadPool;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.yahoo.athenz.auth.PrivateKeyStore;
-import com.yahoo.athenz.auth.PrivateKeyStoreFactory;
-import com.yahoo.athenz.common.server.util.ConfigProperties;
-import com.yahoo.athenz.container.filter.HealthCheckFilter;
-import com.yahoo.athenz.container.log.AthenzRequestLog;
+import java.io.File;
+import java.net.InetAddress;
+import java.util.EnumSet;
+import java.util.HashMap;
+import java.util.Map;
+
+import static com.yahoo.athenz.common.server.util.config.ConfigManagerSingleton.CONFIG_MANAGER;
 
 public class AthenzJettyContainer {
     
@@ -77,6 +73,7 @@ public class AthenzJettyContainer {
     private String banner = null;
     private HandlerCollection handlers = null;
     private PrivateKeyStore privateKeyStore;
+    private final AthenzConnectionListener connectionListener = new AthenzConnectionListener();
     private final JettyConnectionLoggerFactory jettyConnectionLoggerFactory = new JettyConnectionLoggerFactory();
     
     public AthenzJettyContainer() {
@@ -94,15 +91,13 @@ public class AthenzJettyContainer {
     static String getServerHostName() {
         
         String serverHostName = System.getProperty(AthenzConsts.ATHENZ_PROP_HOSTNAME);
-        if (serverHostName == null || serverHostName.isEmpty()) {
+        if (StringUtil.isEmpty(serverHostName)) {
             try {
                 InetAddress localhost = java.net.InetAddress.getLocalHost();
                 serverHostName = localhost.getCanonicalHostName();
             } catch (java.net.UnknownHostException e) {
-                ///CLOVER:OFF
                 LOG.info("Unable to determine local hostname: {}", e.getMessage());
                 serverHostName = "localhost";
-                ///CLOVER:ON
             }
         }
         
@@ -119,46 +114,42 @@ public class AthenzJettyContainer {
     }
     
     public void addRequestLogHandler() {
-        
-        RequestLogHandler requestLogHandler = new RequestLogHandler();
-        
-        // check to see if have a slf4j logger name specified. if we don't
+
+        // check to see if we have a slf4j logger name specified. if we don't
         // then we'll just use our NCSARequestLog extended Athenz logger
         // when using the slf4j logger we don't have the option to pass
         // our audit logger to keep track of unauthenticated requests
         
         String accessSlf4jLogger = System.getProperty(AthenzConsts.ATHENZ_PROP_ACCESS_SLF4J_LOGGER);
-        if (accessSlf4jLogger != null && !accessSlf4jLogger.isEmpty()) {
-            
-            Slf4jRequestLog requestLog = new Slf4jRequestLog();
-            requestLog.setLoggerName(accessSlf4jLogger);
-            requestLog.setExtended(true);
-            requestLog.setPreferProxiedForAddress(true);
-            requestLog.setLogTimeZone("GMT");
-            requestLogHandler.setRequestLog(requestLog);
-            
+        if (!StringUtil.isEmpty(accessSlf4jLogger)) {
+
+            Slf4jRequestLogWriter slf4jRequestLogWriter = new Slf4jRequestLogWriter();
+            slf4jRequestLogWriter.setLoggerName(accessSlf4jLogger);
+
+            CustomRequestLog customRequestLog = new CustomRequestLog(slf4jRequestLogWriter, CustomRequestLog.EXTENDED_NCSA_FORMAT);
+            server.setRequestLog(customRequestLog);
+
         } else {
 
             String logDir = System.getProperty(AthenzConsts.ATHENZ_PROP_ACCESS_LOG_DIR,
                     getRootDir() + "/logs/athenz");
             String logName = System.getProperty(AthenzConsts.ATHENZ_PROP_ACCESS_LOG_NAME,
                     "access.yyyy_MM_dd.log");
+            boolean logForwardedForAddr = Boolean.parseBoolean(
+                    System.getProperty(AthenzConsts.ATHENZ_PROP_LOG_FORWARDED_FOR_ADDR, "false"));
 
-            AthenzRequestLog requestLog = new AthenzRequestLog(logDir + File.separator + logName);
-            requestLog.setAppend(true);
-            requestLog.setExtended(true);
-            requestLog.setPreferProxiedForAddress(true);
-            requestLog.setLogTimeZone("GMT");
-        
+            RequestLogWriter logWriter = new RequestLogWriter(logDir + File.separator + logName);
+            logWriter.setTimeZone("GMT");
             String retainDays = System.getProperty(AthenzConsts.ATHENZ_PROP_ACCESS_LOG_RETAIN_DAYS, "31");
             int days = Integer.parseInt(retainDays);
             if (days > 0) {
-                requestLog.setRetainDays(days);
+                logWriter.setRetainDays(days);
             }
-            requestLogHandler.setRequestLog(requestLog);
+
+            AthenzRequestLog requestLog = new AthenzRequestLog(logWriter);
+            requestLog.setLogForwardedForAddr(logForwardedForAddr);
+            server.setRequestLog(requestLog);
         }
-        
-        handlers.addHandler(requestLogHandler);
     }
     
     public void addServletHandlers(String serverHostName) {
@@ -167,8 +158,8 @@ public class AthenzJettyContainer {
         
         RewriteHandler rewriteHandler = new RewriteHandler();
         
-        // Check whether or not to disable Keep-Alive support in Jetty.
-        // This will be the first handler in our array so we always set
+        // Check whether to disable Keep-Alive support in Jetty.
+        // This will be the first handler in our array, so we always set
         // the appropriate header in response. However, since we're now
         // behind ATS, we want to keep the connections alive so ATS
         // can re-use them as necessary
@@ -185,11 +176,11 @@ public class AthenzJettyContainer {
         
         // Add response-headers, according to configuration
 
-        String responseHeadersJson = System.getProperty(AthenzConsts.ATHENZ_PROP_RESPONSE_HEADERS_JSON, "");
-        if (!responseHeadersJson.isEmpty()) {
+        final String responseHeadersJson = System.getProperty(AthenzConsts.ATHENZ_PROP_RESPONSE_HEADERS_JSON);
+        if (!StringUtil.isEmpty(responseHeadersJson)) {
             HashMap<String, String> responseHeaders;
             try {
-                responseHeaders = new ObjectMapper().readValue(responseHeadersJson, new TypeReference<HashMap<String, String>>() {
+                responseHeaders = new ObjectMapper().readValue(responseHeadersJson, new TypeReference<>() {
                 });
             } catch (Exception exception) {
                 throw new RuntimeException("System-property \"" + AthenzConsts.ATHENZ_PROP_RESPONSE_HEADERS_JSON + "\" must be a JSON object with string values. System property's value: " + responseHeadersJson);
@@ -263,14 +254,13 @@ public class AthenzJettyContainer {
 
         final String checkList = System.getProperty(AthenzConsts.ATHENZ_PROP_HEALTH_CHECK_URI_LIST);
 
-        if (checkList != null && !checkList.isEmpty()) {
+        if (!StringUtil.isEmpty(checkList)) {
             String[] checkUriArray = checkList.split(",");
             for (String checkUri : checkUriArray) {
                 servletCtxHandler.addFilter(filterHolder, checkUri.trim(), EnumSet.of(DispatcherType.REQUEST));
             }
         }
         contexts.addHandler(servletCtxHandler);
-
 
         DeploymentManager deployer = new DeploymentManager();
         
@@ -293,7 +283,10 @@ public class AthenzJettyContainer {
         webappProvider.setExtractWars(true);
         webappProvider.setConfigurationManager(new PropertiesConfigurationManager());
         webappProvider.setParentLoaderPriority(true);
-        //setup a Default web.xml file.  file is applied to a Web application before it's own WEB_INF/web.xml 
+
+        // set up a Default web.xml file.  file is applied to a Web application
+        // before its own WEB_INF/web.xml
+
         setDefaultsDescriptor(webappProvider, jettyHome);
         final String jettyTemp = System.getProperty(AthenzConsts.ATHENZ_PROP_JETTY_TEMP, jettyHome + "/temp");
         webappProvider.setTempDir(new File(jettyTemp));
@@ -303,8 +296,10 @@ public class AthenzJettyContainer {
     }
 
     private void setDefaultsDescriptor(WebAppProvider webappProvider, String jettyHome) {
-        //setup a Default web.xml file.  file is applied to a Web application before it's own WEB_INF/web.xml 
-        //check for file existence
+
+        // set up a Default web.xml file. file is applied to a Web application before
+        // its own WEB_INF/web.xml. check for file existence
+
         String webDefaultXML = jettyHome + DEFAULT_WEBAPP_DESCRIPTOR;
         File file = new File(webDefaultXML);
         if (!file.exists()) {
@@ -344,9 +339,9 @@ public class AthenzJettyContainer {
                 AthenzConsts.ATHENZ_PKEY_STORE_FACTORY_CLASS);
         PrivateKeyStoreFactory pkeyFactory;
         try {
-            pkeyFactory = (PrivateKeyStoreFactory) Class.forName(pkeyFactoryClass).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
-            LOG.error("Invalid PrivateKeyStoreFactory class: {} error: {}", pkeyFactoryClass, e.getMessage());
+            pkeyFactory = (PrivateKeyStoreFactory) Class.forName(pkeyFactoryClass).getDeclaredConstructor().newInstance();
+        } catch (Exception ex) {
+            LOG.error("Invalid PrivateKeyStoreFactory class: {}", pkeyFactoryClass, ex);
             throw new IllegalArgumentException("Invalid private key store");
         }
         this.privateKeyStore = pkeyFactory.create();
@@ -356,49 +351,52 @@ public class AthenzJettyContainer {
         
         final String keyStorePath = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYSTORE_PATH);
         final String keyStorePasswordAppName = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYSTORE_PASSWORD_APPNAME);
+        final String keyStorePasswordKeygroupName = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYSTORE_PASSWORD_KEYGROUPNAME);
         final String keyStorePassword = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYSTORE_PASSWORD);
         final String keyStoreType = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYSTORE_TYPE, "PKCS12");
         final String keyManagerPassword = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYMANAGER_PASSWORD);
         final String keyManagerPasswordAppName = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYMANAGER_PASSWORD_APPNAME);
+        final String keyManagerPasswordKeygroupName = System.getProperty(AthenzConsts.ATHENZ_PROP_KEYMANAGER_PASSWORD_KEYGROUPNAME);
         final String trustStorePath = System.getProperty(AthenzConsts.ATHENZ_PROP_TRUSTSTORE_PATH);
         final String trustStorePassword = System.getProperty(AthenzConsts.ATHENZ_PROP_TRUSTSTORE_PASSWORD);
         final String trustStorePasswordAppName = System.getProperty(AthenzConsts.ATHENZ_PROP_TRUSTSTORE_PASSWORD_APPNAME);
+        final String trustStorePasswordKeygroupName = System.getProperty(AthenzConsts.ATHENZ_PROP_TRUSTSTORE_PASSWORD_KEYGROUPNAME);
         final String trustStoreType = System.getProperty(AthenzConsts.ATHENZ_PROP_TRUSTSTORE_TYPE, "PKCS12");
         final String includedCipherSuites = System.getProperty(AthenzConsts.ATHENZ_PROP_INCLUDED_CIPHER_SUITES);
         final String excludedCipherSuites = System.getProperty(AthenzConsts.ATHENZ_PROP_EXCLUDED_CIPHER_SUITES);
         final String excludedProtocols = System.getProperty(AthenzConsts.ATHENZ_PROP_EXCLUDED_PROTOCOLS, ATHENZ_DEFAULT_EXCLUDED_PROTOCOLS);
         final boolean renegotiationAllowed = Boolean.parseBoolean(System.getProperty(AthenzConsts.ATHENZ_PROP_RENEGOTIATION_ALLOWED, "false"));
 
-        SslContextFactory.Server sslContextFactory = new SslContextFactory.Server();
+        SslContextFactory.Server sslContextFactory = new AthenzSslContextFactory();
         sslContextFactory.setEndpointIdentificationAlgorithm(null);
 
-        if (keyStorePath != null) {
+        if (!StringUtil.isEmpty(keyStorePath)) {
             LOG.info("Using SSL KeyStore path: {}", keyStorePath);
             sslContextFactory.setKeyStorePath(keyStorePath);
         }
-        if (keyStorePassword != null) {
+        if (!StringUtil.isEmpty(keyStorePassword)) {
             //default implementation should just return the same
-            sslContextFactory.setKeyStorePassword(this.privateKeyStore.getApplicationSecret(keyStorePasswordAppName, keyStorePassword));
+            sslContextFactory.setKeyStorePassword(String.valueOf(this.privateKeyStore.getSecret(keyStorePasswordAppName, keyStorePasswordKeygroupName, keyStorePassword)));
         }
         sslContextFactory.setKeyStoreType(keyStoreType);
 
-        if (keyManagerPassword != null) {
-            sslContextFactory.setKeyManagerPassword(this.privateKeyStore.getApplicationSecret(keyManagerPasswordAppName, keyManagerPassword));
+        if (!StringUtil.isEmpty(keyManagerPassword)) {
+            sslContextFactory.setKeyManagerPassword(String.valueOf(this.privateKeyStore.getSecret(keyManagerPasswordAppName, keyManagerPasswordKeygroupName, keyManagerPassword)));
         }
-        if (trustStorePath != null) {
+        if (!StringUtil.isEmpty(trustStorePath)) {
             LOG.info("Using SSL TrustStore path: {}", trustStorePath);
             sslContextFactory.setTrustStorePath(trustStorePath);
         }
-        if (trustStorePassword != null) {
-            sslContextFactory.setTrustStorePassword(this.privateKeyStore.getApplicationSecret(trustStorePasswordAppName, trustStorePassword));
+        if (!StringUtil.isEmpty(trustStorePassword)) {
+            sslContextFactory.setTrustStorePassword(String.valueOf(this.privateKeyStore.getSecret(trustStorePasswordAppName, trustStorePasswordKeygroupName, trustStorePassword)));
         }
         sslContextFactory.setTrustStoreType(trustStoreType);
 
-        if (includedCipherSuites != null && !includedCipherSuites.isEmpty()) {
+        if (!StringUtil.isEmpty(includedCipherSuites)) {
             sslContextFactory.setIncludeCipherSuites(includedCipherSuites.split(","));
         }
         
-        if (excludedCipherSuites != null && !excludedCipherSuites.isEmpty()) {
+        if (!StringUtil.isEmpty(excludedCipherSuites)) {
             sslContextFactory.setExcludeCipherSuites(excludedCipherSuites.split(","));
         }
         
@@ -413,6 +411,7 @@ public class AthenzJettyContainer {
         }
 
         sslContextFactory.setRenegotiationAllowed(renegotiationAllowed);
+        sslContextFactory.setSniRequired(false);
 
         return sslContextFactory;
     }
@@ -422,12 +421,11 @@ public class AthenzJettyContainer {
         
         ServerConnector connector;
         if (proxyProtocol) {
-            connector = new ServerConnector(server, new ProxyConnectionFactory(),
-                    new HttpConnectionFactory(httpConfig));
+            connector = new ServerConnector(server, new ProxyConnectionFactory(), new HttpConnectionFactory(httpConfig));
         } else {
             connector = new ServerConnector(server, new HttpConnectionFactory(httpConfig));
         }
-        if (listenHost != null) {
+        if (!StringUtil.isEmpty(listenHost)) {
             connector.setHost(listenHost);
         }
         connector.setPort(httpPort);
@@ -435,20 +433,13 @@ public class AthenzJettyContainer {
         server.addConnector(connector);
     }
     
-    void addHTTPSConnector(HttpConfiguration httpConfig, int httpsPort, boolean proxyProtocol,
+    void addHTTPSConnector(HttpConfiguration httpsConfig, int httpsPort, boolean proxyProtocol,
             String listenHost, int idleTimeout, boolean needClientAuth, JettyConnectionLogger connectionLogger) {
         
         // SSL Context Factory
     
         SslContextFactory.Server sslContextFactory = createSSLContextObject(needClientAuth);
-    
-        // SSL HTTP Configuration
-        
-        HttpConfiguration httpsConfig = new HttpConfiguration(httpConfig);
-        httpsConfig.setSecureScheme("https");
-        httpsConfig.setSecurePort(httpsPort);
-        httpsConfig.addCustomizer(new SecureRequestCustomizer());
-    
+
         // SSL Connector
         
         ServerConnector sslConnector;
@@ -469,9 +460,14 @@ public class AthenzJettyContainer {
         if (connectionLogger != null) {
             sslConnector.addBean(connectionLogger);
         }
+        
+        // Listen to when HTTP connections open/close/handshake.
+
+        sslConnector.addBean(connectionListener);
         server.addConnector(sslConnector);
 
         // Reload the key-store if the file is changed
+
         final int reloadSslContextSeconds = Integer.parseInt(System.getProperty(AthenzConsts.ATHENZ_PROP_KEYSTORE_RELOAD_SEC, "0"));
         if ((reloadSslContextSeconds > 0) && (sslContextFactory.getKeyStorePath() != null)) {
             try {
@@ -479,14 +475,23 @@ public class AthenzJettyContainer {
                 keystoreScanner.setScanInterval(reloadSslContextSeconds);
                 server.addBean(keystoreScanner);
             } catch (IllegalArgumentException exception) {
-                LOG.error("Keystore cant be automatically reloaded when \"{}\" is changed: {}", sslContextFactory.getKeyStorePath(), exception.getMessage());
+                LOG.error("Keystore can't be automatically reloaded when \"{}\" is changed: {}",
+                        sslContextFactory.getKeyStorePath(), exception.getMessage());
                 throw exception;
             }
         }
     }
-    
+
+    HttpConfiguration getHttpsConfig(HttpConfiguration httpConfig, int httpsPort, boolean sniRequired, boolean sniHostCheck) {
+        HttpConfiguration httpsConfig = new HttpConfiguration(httpConfig);
+        httpsConfig.setSecureScheme("https");
+        httpsConfig.setSecurePort(httpsPort);
+        httpsConfig.addCustomizer(new SecureRequestCustomizer(sniRequired, sniHostCheck, -1L, false));
+        return httpsConfig;
+    }
+
     public void addHTTPConnectors(HttpConfiguration httpConfig, int httpPort, int httpsPort,
-            int statusPort) {
+            int oidcPort, int statusPort) {
 
         int idleTimeout = Integer.parseInt(
                 System.getProperty(AthenzConsts.ATHENZ_PROP_IDLE_TIMEOUT, "30000"));
@@ -510,22 +515,35 @@ public class AthenzJettyContainer {
             connectionLogger = jettyConnectionLoggerFactory.create();
         }
 
+        boolean sniRequired = Boolean.parseBoolean(
+                System.getProperty(AthenzConsts.ATHENZ_PROP_SNI_REQUIRED, "false"));
+        boolean sniHostCheck = Boolean.parseBoolean(
+                System.getProperty(AthenzConsts.ATHENZ_PROP_SNI_HOSTCHECK, "true"));
+        boolean needClientAuth = Boolean.parseBoolean(
+                System.getProperty(AthenzConsts.ATHENZ_PROP_CLIENT_AUTH, "false"));
+
         // HTTPS Connector
 
         if (httpsPort > 0) {
-            boolean needClientAuth = Boolean.parseBoolean(
-                    System.getProperty(AthenzConsts.ATHENZ_PROP_CLIENT_AUTH, "false"));
-
-            addHTTPSConnector(httpConfig, httpsPort, proxyProtocol, listenHost,
+            HttpConfiguration httpsConfig = getHttpsConfig(httpConfig, httpsPort, sniRequired, sniHostCheck);
+            addHTTPSConnector(httpsConfig, httpsPort, proxyProtocol, listenHost,
                     idleTimeout, needClientAuth, connectionLogger);
         }
-        
+
+        // OIDC Connector - only if it's different from HTTPS
+
+        if (oidcPort > 0 && oidcPort != httpsPort) {
+            HttpConfiguration httpsConfig = getHttpsConfig(httpConfig, oidcPort, sniRequired, sniHostCheck);
+            addHTTPSConnector(httpsConfig, oidcPort, proxyProtocol, listenHost,
+                    idleTimeout, needClientAuth, connectionLogger);
+        }
+
         // Status Connector - only if it's different from HTTP/HTTPS
         
         if (statusPort > 0 && statusPort != httpPort && statusPort != httpsPort) {
-            
             if (httpsPort > 0) {
-                addHTTPSConnector(httpConfig, statusPort, false, listenHost, idleTimeout, false, connectionLogger);
+                HttpConfiguration httpsConfig = getHttpsConfig(httpConfig, httpsPort, false, false);
+                addHTTPSConnector(httpsConfig, statusPort, false, listenHost, idleTimeout, false, connectionLogger);
             } else if (httpPort > 0) {
                 addHTTPConnector(httpConfig, statusPort, false, listenHost, idleTimeout);
             }
@@ -548,6 +566,31 @@ public class AthenzJettyContainer {
         threadPool.setMaxThreads(maxThreads);
 
         server = new Server(threadPool);
+
+        // if configured to override Jetty's default retainable byte buffer pool,
+        // make sure the ArrayRetainableByteBufferPool is added before the server is started
+
+        boolean setRetainableByteBufferPoolEnabled = Boolean.parseBoolean(
+                System.getProperty(AthenzConsts.ATHENZ_PROP_SERVER_POOL_SET_ENABLED, "false"));
+
+        if (setRetainableByteBufferPoolEnabled) {
+            long maxHeapMemory = Long.parseLong(
+                    System.getProperty(AthenzConsts.ATHENZ_PROP_SERVER_POOL_MAX_HEAP_MEMORY, "134217728"));
+            long maxDirectMemory = Long.parseLong(
+                    System.getProperty(AthenzConsts.ATHENZ_PROP_SERVER_POOL_MAX_DIRECT_MEMORY, "134217728"));
+            int minCapacity = Integer.parseInt(
+                    System.getProperty(AthenzConsts.ATHENZ_PROP_SERVER_POOL_MIN_CAPACITY, "0"));
+            int maxCapacity = Integer.parseInt(
+                    System.getProperty(AthenzConsts.ATHENZ_PROP_SERVER_POOL_MAX_CAPACITY, "-1"));
+            int factor = Integer.parseInt(
+                    System.getProperty(AthenzConsts.ATHENZ_PROP_SERVER_POOL_FACTOR, "-1"));
+            int maxBucketSize = Integer.parseInt(
+                    System.getProperty(AthenzConsts.ATHENZ_PROP_SERVER_POOL_MAX_BUCKET_SIZE, "1000"));
+
+            server.addBean(new ArrayRetainableByteBufferPool(minCapacity, factor, maxCapacity,
+                    maxBucketSize, maxHeapMemory, maxDirectMemory));
+        }
+
         handlers = new HandlerCollection();
         server.setHandler(handlers);
     }
@@ -560,7 +603,11 @@ public class AthenzJettyContainer {
                 AthenzConsts.ATHENZ_HTTP_PORT_DEFAULT);
         int httpsPort = ConfigProperties.getPortNumber(AthenzConsts.ATHENZ_PROP_HTTPS_PORT,
                 AthenzConsts.ATHENZ_HTTPS_PORT_DEFAULT);
-        
+
+        // extract the port for oidc requests if one is configured
+
+        int oidcPort = ConfigProperties.getPortNumber(AthenzConsts.ATHENZ_PROP_OIDC_PORT, 0);
+
         // for status port we'll use the protocol specified for the regular http
         // port. if both http and https are provided then https will be picked
         // it could also be either one of the values specified as well
@@ -572,21 +619,40 @@ public class AthenzJettyContainer {
         AthenzJettyContainer container = new AthenzJettyContainer();
         container.setBanner("http://" + serverHostName + " http port: " +
                 httpPort + " https port: " + httpsPort + " status port: " +
-                statusPort);
+                statusPort + " oidc port: " + oidcPort);
 
         int maxThreads = Integer.parseInt(System.getProperty(AthenzConsts.ATHENZ_PROP_MAX_THREADS,
                 Integer.toString(AthenzConsts.ATHENZ_HTTP_MAX_THREADS)));
         container.createServer(maxThreads);
 
         HttpConfiguration httpConfig = container.newHttpConfiguration();
-        container.addHTTPConnectors(httpConfig, httpPort, httpsPort, statusPort);
+        container.addHTTPConnectors(httpConfig, httpPort, httpsPort, oidcPort, statusPort);
         container.addServletHandlers(serverHostName);
         
         container.addRequestLogHandler();
         return container;
     }
 
-    ///CLOVER:OFF
+    public static void initConfigManager() {
+
+        // We're going to configure any dynamic config sources first since those parameters
+        // will take precedence over parameters configured in the properties file. These
+        // config sources must be specified as part of the server startup script
+
+        // Manage AWS parameter store configurations as the first config source
+
+        final String awsParameterStorePath = System.getProperty(AthenzConsts.ATHENZ_PROP_AWS_PARAM_STORE_PATH);
+        if (!StringUtil.isEmpty(awsParameterStorePath)) {
+            CONFIG_MANAGER.addConfigSource(ConfigProviderAwsParametersStore.PROVIDER_DESCRIPTION_PREFIX + awsParameterStorePath);
+        }
+
+        // Manage properties file configurations
+
+        final String propFile = System.getProperty(AthenzConsts.ATHENZ_PROP_FILE_NAME,
+                getRootDir() + "/conf/athenz/athenz.properties");
+        CONFIG_MANAGER.addConfigSource(ConfigProviderFile.PROVIDER_DESCRIPTION_PREFIX + propFile);
+    }
+
     public void run() {
         try {
             server.start();
@@ -599,6 +665,7 @@ public class AthenzJettyContainer {
 
     public void stop() {
         try {
+            connectionListener.shutdown();
             server.stop();
         } catch (Exception ignored) {
         }
@@ -606,11 +673,8 @@ public class AthenzJettyContainer {
 
     public static void main(String [] args) {
 
-        System.getProperties().remove("socksProxyHost");
-        String propFile = System.getProperty(AthenzConsts.ATHENZ_PROP_FILE_NAME,
-                getRootDir() + "/conf/athenz/athenz.properties");
-        ConfigProperties.loadProperties(propFile);
-        
+        initConfigManager();
+
         try {
             AthenzJettyContainer container = createJettyContainer();
             container.run();
@@ -622,5 +686,4 @@ public class AthenzJettyContainer {
             throw exc;
         }
     }
-    ///CLOVER:ON
 }
