@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 Yahoo Holdings Inc.
+ * Copyright The Athenz Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,11 +18,11 @@ package com.yahoo.athenz.container.filter;
 
 import java.io.IOException;
 
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -31,7 +31,7 @@ import com.yahoo.athenz.common.filter.RateLimit;
 import com.yahoo.athenz.common.filter.RateLimitFactory;
 import com.yahoo.athenz.container.AthenzConsts;
 
-public class RateLimitFilter implements javax.servlet.Filter {
+public class RateLimitFilter implements jakarta.servlet.Filter {
     private static final Logger LOGGER = LoggerFactory.getLogger(RateLimitFilter.class);
 
     private RateLimit rateLimit;
@@ -54,7 +54,7 @@ public class RateLimitFilter implements javax.servlet.Filter {
     }
 
     @Override
-    public void init(FilterConfig config) throws ServletException {
+    public void init(FilterConfig config) {
     }
 
     private void registerRateLimitFilter() {
@@ -62,13 +62,13 @@ public class RateLimitFilter implements javax.servlet.Filter {
                 AthenzConsts.ATHENZ_RATE_LIMIT_FACTORY_CLASS);
         RateLimitFactory rateLimitFactory;
         try {
-            rateLimitFactory = (RateLimitFactory) Class.forName(ratelimitFactoryClass).newInstance();
+            rateLimitFactory = (RateLimitFactory) Class.forName(ratelimitFactoryClass).getDeclaredConstructor().newInstance();
             this.rateLimit = rateLimitFactory.create();
             if (LOGGER.isDebugEnabled()) {
                 LOGGER.debug("Registered rate limit filter: {}", ratelimitFactoryClass);
             }
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
-            LOGGER.error("Invalid RateLimitFactory class: {} error: {}", ratelimitFactoryClass, e.getMessage());
+        } catch (Exception ex) {
+            LOGGER.error("Invalid RateLimitFactory class: {}", ratelimitFactoryClass, ex);
             throw new IllegalArgumentException("Invalid RateLimitFactory class");
         }
     }
